fixed empty icones and links

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 </div><!--//item-->
 
 				<div class="item row">
-                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://www.utc.fr/" target="_blank">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="http://liris.cnrs.fr/" target="_blank">
                                 <img class="img-responsive project-image" src="assets/images/liris.png" alt="INSA-Lyon" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
@@ -144,7 +144,7 @@
 
 
                                   <div class="item row">
-                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://www.utc.fr/" target="_blank">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://www.dodincampenonbernard.fr/" target="_blank">
                                 <img class="img-responsive project-image" src="assets/images/vinci.png" alt="INSA-Lyon" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
@@ -258,7 +258,7 @@
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span><a href="https://goo.gl/maps/YeoJsowiPzp">Lyon, France</a></li>
-                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="marie.le-guilly@insa-lyon">marie.le-guilly@insa-lyon.fr</a></li>
+                                <li><i class="fa fa-envelope"></i><span class="sr-only">Email:</span><a href="marie.le-guilly@insa-lyon">marie.le-guilly@insa-lyon.fr</a></li>
                                 <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="https://marieLGY.github.io">https://marieLGY.github.io</a></li>
                             </ul>
                         </div><!--//content-->
@@ -324,11 +324,11 @@
                         <h2 class="heading">Credits</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><a href="http://getbootstrap.com/" target="_blank"><i class="fa fa-external-link"></i> Bootstrap 3.2</a></li>
-                                <li><a href="http://fortawesome.github.io/Font-Awesome/" target="_blank"><i class="fa fa-external-link"></i> FontAwsome 4.1</a></li>
-                                <li><a href="http://jquery.com/" target="_blank"><i class="fa fa-external-link"></i> jQuery</a></li>
-                                <li><a href="http://caseyscarborough.com/projects/github-activity/" target="_blank"><i class="fa fa-external-link"></i> GitHub Activity Stream</a></li>
-                                <li><a href="https://github.com/sdepold/jquery-rss" target="_blank"><i class="fa fa-external-link"></i> jQuery RSS</a></li>
+                                <li><a href="http://getbootstrap.com/" target="_blank"><i class="fa fa-link"></i> Bootstrap 3.2</a></li>
+                                <li><a href="http://fortawesome.github.io/Font-Awesome/" target="_blank"><i class="fa fa-link"></i> FontAwsome 4.1</a></li>
+                                <li><a href="http://jquery.com/" target="_blank"><i class="fa fa-link"></i> jQuery</a></li>
+                                <li><a href="http://caseyscarborough.com/projects/github-activity/" target="_blank"><i class="fa fa-link"></i> GitHub Activity Stream</a></li>
+                                <li><a href="https://github.com/sdepold/jquery-rss" target="_blank"><i class="fa fa-link"></i> jQuery RSS</a></li>
 
                             </ul>
 
