update with dissertation file

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
         <div class="container clearfix">
             <img class="profile-image img-fluid float-left" src="assets/images/Marie.png" alt="James Lee" />
             <div class="profile-content float-left">
-                <h1 class="name">Marie Le Guilly</h1>
-                <h2 class="desc">Phd. Student at <a href="https://www.insa-lyon.fr/">INSA Lyon</a> with <a href="http://liris.cnrs.fr/">LIRIS Lab</a></h2>
-		            <h2 class="desc">Engineer in Computer Science from INSA Lyon</h2>
+                <h1 class="name">Marie Le Guilly, PhD</h1>
+                <h2>PhD and Engineer in Computer science from <a href="https://www.insa-lyon.fr/">INSA Lyon</a></h2>
+                <h3>Interested in Machine Learning, Databases, and data science</h3>
+                <!--<h2 class="desc">Phd. Student at <a href="https://www.insa-lyon.fr/">INSA Lyon</a> with <a href="http://liris.cnrs.fr/">LIRIS Lab</a></h2>-->
+		            <!--<h2 class="desc">Engineer in Computer Science from INSA Lyon</h2>-->
                 <!--<ul class="social list-inline">
                     <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
                     <li class="list-inline-item"><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
@@ -62,8 +64,8 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I'm Marie Le Guilly, a french PHD student in computer science. I work on databases and machine learning, to improve data selection for building more accurate predictive models. </p>
-                            <p>I'm currently looking for a data scientist position, for the autumn 2020</p>
+                            <p>I'm Marie Le Guilly, data science doctor. I work on databases and machine learning, to improve data selection for building more accurate predictive models. I currently work at Heverett Group, supervising innovative project on data science.</p>
+
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </section><!--//section-->
@@ -73,7 +75,9 @@
                         <h2 class="heading">About My PhD</h2>
                         <div class="content">
 			<h5>Title</h5>
-			<p>Guide data selection for predictive models</p>
+			<p>Guide data selection for predictive models (<a href="assets/manuscrit_final_Le_Guilly.pdf" target="_blank">Link to dissertation</a>)
+
+      </p>
 
 
 
