forgot to add index

--- a/index.html
+++ b/index.html
@@ -213,7 +213,9 @@ Third, assuming the data has successfully been extracted from the database, the 
 			                         <h3 class="title">Journals</h3>
 
 			                            <div class="item">
-                                    <p> Evaluating classification feasibility using functional dependencies, Marie Le Guilly, Jean-Marc Petit and Vasile-Marian Scuturici, Transactions on Large-Scale Data and Knowledge-Centered Systems (TLDKS), 27 pages  (to appear)</p>
+                                    <p> Evaluating classification feasibility using functional dependencies, Marie Le Guilly, Jean-Marc Petit and Vasile-Marian Scuturici, Transactions on Large-Scale Data and Knowledge-Centered Systems (TLDKS), 27 pages  (to appear)
+                                    <a href="assets/TLDKS.pdf" target="_blank">Access paper</a></p>
+
                                       <p>A First Experimental Study on Functional Dependencies for Imbalanced Datasets Classification, Marie Le Guilly, Jean-Marc Petit and Vasile-Marian Scuturici, « Communications in Computer and Information Science » series, Springer, Revised Selected Papers from the International Workshop ISIP, Japan, 2018, 17 pages</p>
 
                                   </div><!--//item-->
@@ -221,8 +223,10 @@ Third, assuming the data has successfully been extracted from the database, the 
 			<h3 class="title">International conferences</h3>
 			<div class="item">
                       <p>Contextualisation of Datasets for better classification models: Application to Lyon Airbus Helicopters Flight Data 2020, Marie Le Guilly, Daouayry Nassia, Pierre-Loic Maisonneuve, Ammar Mechouche, Jean-Marc Petit and Marian Scuturici, 24th European Conference on Advances in Databases and Information Systems (ADBIS), 10 pages (to appear)</p>
-                      <p>Attempt to better trust classification models: Application to the Ageing of Refrigerated Graz Transport Vehicles (industrial paper), Marie Le Guilly, Claudia Capo, Marian Scuturici, Jean Marc Petit, Rémi Revellin, Jocelyn Bonjour, Gérald Cavalier 25th International Symposium on Methodologies for Intelligent Systems (ISMIS’20), 10 pages (to appear)</p>
-                      <p>ExplIQuE: Interactive Databases Exploration with SQL (demo paper), Marie Le Guilly, Jean-Marc Petit, Vasile-Marian Scuturici and Ihab Ilyas, 28th ACM International Conference on Information and Knowledge Management, CIKM 2019, China, 2019, 4 pages</p>
+                      <p>Attempt to better trust classification models: Application to the Ageing of Refrigerated Graz Transport Vehicles (industrial paper), Marie Le Guilly, Claudia Capo, Marian Scuturici, Jean Marc Petit, Rémi Revellin, Jocelyn Bonjour, Gérald Cavalier 25th International Symposium on Methodologies for Intelligent Systems (ISMIS’20), 10 pages (to appear)
+                      <a href="assets/ISMIS.pdf" target="_blank">Access paper</a></p>
+                      <p>ExplIQuE: Interactive Databases Exploration with SQL (demo paper), Marie Le Guilly, Jean-Marc Petit, Vasile-Marian Scuturici and Ihab Ilyas, 28th ACM International Conference on Information and Knowledge Management, CIKM 2019, China, 2019, 4 pages
+                      <a href="assets/CIKM.pdf" target="_blank">Access paper</a></p>
                       <p>Ageing of refrigerated transport vehicles: development of a numerical predictive model, Marie Le Guilly, Claudia Capo, Léo Pape, Marian Scuturici, Jean Marc Petit, Rémi Revellin, Jocelyn Bonjour, Gérald Cavalier, 6th IIR conference on sustainability and the cold chain, 9 pages (to appear)</p>
                          </div><!--//item-->
 
